--- a/public_html/public/css/style.css
+++ b/public_html/public/css/style.css
@@ -23,7 +23,7 @@ body.login-page {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh; /* Garante que o corpo ocupe a altura total */
+  min-height: 80vh; /* Garante que o corpo ocupe a altura total */
 }
 
 body.login-page main {
@@ -725,3 +725,9 @@ footer {
 .list-group-item:not(:last-child) {
     margin-bottom: 2px;
 }
+.addmaquina select {
+    width: 350px;   
+}
+}
+
+
